[package]
name = "kouik"
version = "0.3.0"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>","Gabriel Theuws <gaby.theuws@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="3"
libc = "0.2"
levenshtein = "1.0.5"
